--- a/index.html
+++ b/index.html
@@ -94,9 +94,127 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <div class="container categories">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="c1 d-flex justify-content-around align-items-center">
+              <h1>Watch</h1>
+              <img src="images\categories\watch.png" alt="">
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="c2 d-flex justify-content-around align-items-center">
+              <h1>Bag</h1>
+              <img src="images\categories\bag.png" alt="">
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="c3 d-flex justify-content-around align-items-center">
+              <h1>Shoes</h1>
+              <img src="images\categories\shoes.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+   </div>
+  
+   <div class="container shoes" id="shoes">
+    <h3>Shoes</h3>
+
+    <div class="row row-cols-1 row-cols-md-3 g-3">
+      <div class="col">
+        <div class="card">
+          <img src="images\shoes\shoe-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Adidas Yeezy</h5>
+            <p class="card-text">Style meets comfort in collaboration with Kanye West. Featuring Boost technology for unparalleled cushioning and energy return. Sleek design, premium materials. Elevate your streetwear game.</p>
+            <h5>$120</h5>
+            <button class="bnb">Buy Now>></button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="images\shoes\shoe-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Nike Air Zoom</h5>
+            <p class="card-text">Performance meets style. Featuring Zoom Air technology for responsive cushioning and energy return. Designed for athletes and trendsetters. Elevate your stride.</p>
+            <h5>$320</h5>
+            <button class="bnb">Buy Now>></button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="images\shoes\shoe-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Nike Air Max</h5>
+            <p class="card-text">Iconic style, ultimate comfort. Featuring Max Air cushioning for unmatched impact protection and a timeless silhouette. Elevate your look with Nike Air Max.</p>
+            <h5>$350</h5>
+            <button class="bnb">Buy Now>></button>
+          </div>
+        </div>
+      </div>
+    </div>
+   </div>
+   <div class="container" id="backpack">
+    <h3>Backpack</h3>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="images\bags\bag-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Ogio Red Backpack</h5>
+            <h5>$125</h5>
+            <p class="card-text">Your ultimate companion for on-the-go lifestyles. With its sleek design and durable construction, this backpack is built to handle whatever your day throws at you. Boasting ample storage space and organizational pockets, it keeps your essentials secure and easily accessible. Whether you're headed to work, school, or the gym, the OGIO Red Backpack ensures you're always prepared in style.</p>
+          </div>
+          <div class="card-footer">
+            <button class="bnb">Buy Now>></button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images\bags\bag-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Burton Blue Backpack</h5>
+            <h5>$320</h5>
+            <p class="card-text">Your go-to choice for style and functionality. Crafted with durability in mind, this backpack is designed to withstand your everyday adventures. Featuring ample storage and compartments, it keeps your essentials organized and accessible. From campus commutes to weekend getaways, the Burton Blue Backpack combines sleek design with practicality, ensuring you're ready for any journey.</p>
+          </div>
+          <div class="card-footer">
+            <button class="bnb">Buy Now>></button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images\bags\bag-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Kathmandu Black Backpack</h5>
+            <h5>$129</h5>
+            <p class="card-text">TYour ultimate travel companion. Crafted with rugged durability and sleek style, this backpack is built to withstand any adventure. With ample storage and convenient compartments, it keeps your essentials organized and accessible on the go. Whether you're exploring the city or trekking through the wilderness, the Kathmandu Black Backpack ensures you're prepared for any journey in style.</p>
+          </div>
+          <div class="card-footer">
+            <button class="bnb">Buy Now>></button>
+          </div>
+        </div>
+      </div>
+    </div>
+   </div>
+   <div class="container ob d-flex justify-content-center align-items-center" id="subscribe">
+    <div>
+      <h3>LET'S STAY IN TOUCH</h3>
+      <H6>Get updates on sales, specials & more</H6>
+      <input class="form-control" type="text">
+      <button class="bnb">SUBMIT</button>
+    </div>
    </div>
 
-
+   <footer>
+    <p>
+      <small>©Panda Commerce. All right reserved. Dhaka,Bangladesh.</small>
+    </p>
+   </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
